[project]
name = "routeos"
version = "0.1.0"
description = "Adaptive Small Language Model Inference Engine — token-level routing for attention, MoE experts, and KV-cache"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Portfolio Project", email = "your@email.com" }]
keywords = ["llm", "inference", "moe", "kv-cache", "ai-infra", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "transformers>=4.40",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
gpu = ["triton>=2.2"]
vllm = ["vllm>=0.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/yourusername/routeos"
Repository = "https://github.com/yourusername/routeos"
Issues = "https://github.com/yourusername/routeos/issues"

[project.scripts]
routeos-serve = "routeos.api:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routeos"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
